--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/leyuan/bypowder/issues"
   },
-  "homepage": "https://github.com/leyuan/bypowder#readme"
+  "homepage": "https://github.com/leyuan/bypowder#readme",
+  "dependencies": {
+    "body-parser": "^1.14.2",
+    "express": "^4.13.4",
+    "nodemailer": "^2.1.0"
+  }
 }
